[package]
name = "tdp-tl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
env_logger = "0.11"
indexmap = "2"
log = "0.4"
nalgebra = "0.33"
nom-gcode = "0.1"
ordslice = "0.3"
rangemap = "1.2"
rayon = "1.7"
stopwatch = "0.0.7"
svo-rs = { git = "https://github.com/Adam-Gleave/svo-rs" }
