[package]
name = "tdp-tl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
env_logger = "0.11.8"
indexmap = "2.9.0"
log = "0.4.27"
nalgebra = "0.33.2"
nom-gcode = "0.1.1"
ordslice = "0.3.0"
rangemap = "1.5.1"
rayon = "1.10.0"
simple-stopwatch = "0"
svo-rs = { git = "https://github.com/Adam-Gleave/svo-rs" }
