[package]
name = "tdp-tl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
argh = "0.1.13"
binary-greedy-meshing = "0.3.6"
byteorder = "1.5.0"
env_logger = "0.11.8"
fast-surface-nets = "0.2.1"
indexmap = "2.9.0"
isosurface = "0.1.0-alpha.0"
log = "0.4.27"
mesh-tools = "0.2.0"
nalgebra = "0.31"
nom-gcode = "0.1.1"
ordslice = "0.3.0"
rangemap = "1.5.1"
rayon = "1.10.0"
simple-stopwatch = "0"
transvoxel = "1.2.0"
svo-rs = { path = "./svo-rs" }
nanovdb = { path = "./nanovdb" }

[profile.release]
debug = true
